# LunaClient

./: .gitignore  .gitmodules  Asasdad.qml  AsasdadForm.ui.qml  Audio.qml  CMakeLists.txt  Display.qml  Light.qml  LightForm.ui.qml  Luna.pro  Luna.qbs  README.md  Settings.qml  SettingsIcon.qml  audiochannelprocessor.cpp  audiochannelprocessor.h  binarystream.h  colormode.h  colorprocessor.cpp  colorprocessor.h  colorspace.cpp  colorspace.h  colorutils.cpp  colorutils.h  conanfile.py  conanfile.txt  delegate.h  event.h  fft.cpp  fft.h  luna.cpp  luna.h  lunaaudioprovider.cpp  lunaaudioprovider.h  lunaconfig.h  lunailluminationprovider.cpp  lunailluminationprovider.h  lunalegacy.cpp  lunalegacy.h  lunamanager.cpp  (+15 more)
LunaApp/: CMakeLists.txt  Common.pri  LunaApp.pro  LunaApp.qbs  LunaCore.pri  LunaPlugin.pri  TLS.qbs
LunaApp/AudioPlugin/: AudioChannelProcessor.cpp  AudioChannelProcessor.hpp  AudioEffectPlugin.cpp  AudioEffectPlugin.hpp  AudioModel.cpp  AudioModel.hpp  AudioPlugin.cpp  AudioPlugin.hpp  AudioPlugin.pro  AudioPlugin.qbs  AudioPlugin.qml  AudioProvider.cpp  AudioProvider.hpp  CMakeLists.txt  FFT.cpp  FFT.hpp  Main.qml  SampleBuffer.cpp  SampleBuffer.hpp  Spectrogram.qml  audiochannelprocessor.cpp  audiochannelprocessor.h  audioeffectplugin.cpp  audioeffectplugin.h  audiomodel.cpp  audiomodel.h  audioplugin.cpp  audioplugin.h  audioprovider.cpp  audioprovider.h  audiotab.cpp  audiotab.h  fft.cpp  fft.h  qml.qrc  samplebuffer.cpp  samplebuffer.h
LunaApp/AudioPlugin/win32/: AudioCapture.cpp  AudioCapture.hpp  audiocapture.cpp  audiocapture.h  win32errorhandling.cpp
LunaApp/ConnectorPlugin/: ConnectorPlugin.pro  connectorplugin.cpp  connectorplugin.h  connectorplugin_global.h
LunaApp/EffectsPlugin/: CMakeLists.txt  EffectsPlugin.cpp  EffectsPlugin.hpp  EffectsPlugin.pro  EffectsPlugin.qbs  FlameEffectPlugin.cpp  FlameEffectPlugin.hpp  FlameModel.cpp  FlameModel.hpp  FlameProvider.cpp  FlameProvider.hpp  FlameTab.qml  Noise.cpp  Noise.hpp  PlasmaEffectPlugin.cpp  PlasmaEffectPlugin.hpp  PlasmaModel.cpp  PlasmaModel.hpp  PlasmaProvider.cpp  PlasmaProvider.hpp  PlasmaTab.qml  effects.h.autosave  effectsplugin.cpp  effectsplugin.h  flameeffectplugin.cpp  flameeffectplugin.h  flamemodel.cpp  flamemodel.h  flameprovider.cpp  flameprovider.h  flametab.cpp  flametab.h  lunaeffects_pl.ts  noise.cpp  noise.h  plasmaeffectplugin.cpp  plasmaeffectplugin.h  plasmamodel.cpp  plasmamodel.h  plasmaprovider.cpp  (+2 more)
LunaApp/LegacyUdpPlugin/: LegacyUdpPage.qml  LegacyUdpPlugin.pro  LegacyUdpPlugin.qbs  connectorudplegacy.cpp  connectorudplegacy.h  legacyudpconnectorplugin.cpp.autosave  legacyudpplugin.cpp  legacyudpplugin.h  qml.qrc  udplegacyconnectorplugin.cpp  udplegacyconnectorplugin.h
LunaApp/LegacyUdpPlugin/win32/: address.cpp  address.h  networkinterface.cpp  socket.cpp  socket.h
LunaApp/LightPlugin/: CMakeLists.txt  ColorFromThemeControl.qml  ColorPickerControl.qml  LightEffectPlugin.hpp  LightModel.cpp  LightModel.hpp  LightPlugin.cpp  LightPlugin.hpp  LightPlugin.pro  LightPlugin.qbs  LightPlugin.qml  LightProvider.cpp  LightProvider.hpp  Main.qml  ManualControl.qml  TemperatureControl.qml  lighteffectplugin.cpp  lighteffectplugin.cpp.autosave  lighteffectplugin.h  lightmodel.cpp  lightmodel.h  lightplugin.cpp  lightplugin.h  lightprovider.cpp  lightprovider.h  lighttab.cpp  lighttab.h  qml.qrc  translation.pl.ts
LunaApp/LightPlugin/win32/: ThemeColor.cpp  ThemeColor.hpp  themecolor.cpp  themecolor.h
LunaApp/Luna/: CMakeLists.txt  ConnectionsPage.qml  Light.qml  Luna.cpp  Luna.hpp  Luna.pro  Luna.qbs  Manager.cpp  Manager.hpp  TabPage.qml  TabsModel.cpp  TabsModel.hpp  binarystream.cpp  luna.cpp  luna.h  luna_pl.ts  main.cpp  main.qml  manager.cpp  qml.qrc  qt.conf  screenprovider.cpp  tabsmodel.cpp
LunaApp/Luna/luna/: array2d.h  audioprovider.h  colorprocessor.h  colorspace.h  config.h  connector.h  connectorudplegacy.h  illuminationprovider.cpp  illuminationprovider.h  lunaplugin.cpp  lunaplugin.h  provider.h  samplebuffer.cpp  strand.cpp
LunaApp/LunaCore/: CMakeLists.txt  LunaCore.pro  LunaCore.qbs  colormode.h  colorprocessor.h  colorspace.cpp  colorspace.h  colorutils.cpp  colorutils.h  connector.h  connectorudplegacy.cpp  delegate.h  lunacore.cpp  lunaplugin.h  manager.cpp  manager.h  samplebuffer.h  strand.cpp  strand.h
LunaApp/LunaPlugin/: CMakeLists.txt  LunaPlugin.pro  LunaPlugin.qbs  configurableplugin.cpp  configurableplugin.h  connectorplugin.cpp  connectorplugin.h  effectplugin.cpp  effectplugin.h  luna.cpp  luna.h  lunaplugin.cpp  lunaplugin.h  lunaplugin_global.h  lunatab.cpp  lunatab.h
LunaApp/ScreenPlugin/: Array2d.hpp  CMakeLists.txt  Main.qml  ScreenEffectPlugin.cpp  ScreenEffectPlugin.hpp  ScreenModel.cpp  ScreenModel.hpp  ScreenPlugin.hpp  ScreenPlugin.pro  ScreenPlugin.qbs  ScreenPlugin.qml  ScreenProvider.cpp  ScreenProvider.hpp  qml.qrc  screeneffectplugin.cpp  screeneffectplugin.h  screenmodel.cpp  screenmodel.h  screenplugin.cpp  screenplugin.h  screenprovider.cpp  screenprovider.h  screentab.cpp  screentab.h  translation.pl.ts
LunaApp/SecureNetworkPlugin/: CMakeLists.txt  DTLSSocket.cpp  DTLSSocket.hpp  HostDiscovery.hpp  SecureHost.cpp  SecureHost.hpp  SecureNetworkConnector.hpp  SecureNetworkConnectorPlugin.hpp  SecureNetworkPage.qml  SecureNetworkPlugin.hpp  SecureNetworkPlugin.qbs  StrandSerializer.cpp  StrandSerializer.h  StrandSerializer.hpp  ca.crt  client_command_decoder.cpp  client_command_decoder.h  client_encoder.cpp  client_encoder.h  client_handler.h  command_decoder.h  command_dispatcher.cpp  command_dispatcher.h  command_encoder.cpp  command_encoder.h  controlsocket.cpp  controlsocket.h  dtlssocket.cpp  dtlssocket.h  hostdiscovery.cpp  hostdiscovery.h  own.crt  own.key  packets.h  qml.qrc  securehost.cpp  securehost.h  securenetworkconnector.cpp  securenetworkconnector.h  securenetworkconnectorplugin.cpp  (+5 more)
LunaApp/SocketLib/: SocketLib.qbs
LunaApp/imports/: Plugin.qbs
LunaApp/interface/: CMakeLists.txt
LunaApp/modules/: luna_plugin.cmake
LunaMoc/: DragHandle.qml  (+13 more)
prism/: CMakeLists.txt
prism/source/: Prism.cpp
(+136 files in other folders)
